@@ -1,5 +1,8 @@
 2006-11-11  Doug Hellmann  <dhellmann@racemi.com>
 
+	* static/js/oneoffcast/user.js (user_onload): Set the initial
+	focus to the URL field.
+
 	* templates/base.html: Add dojo.widget package configuration to
 	the javascript.
 
